--- a/dvc.yaml
+++ b/dvc.yaml
@@ -6,3 +6,16 @@ stages:
       - config/config.yaml
     outs:
       - artifacts/data_ingestion/Chest-CT-Scan-data
+  prepare_base_model:
+    cmd: python src/cnnClassifier/pipeline/stage_02_prepare_base_model.py
+    deps:
+      - src/cnnClassifier/pipeline/stage_02_prepare_base_model.py
+      - config/config.yaml
+    params:
+      - IMAGE_SIZE
+      - INCLUDE_TOP
+      - CLASSES
+      - WEIGHTS
+      - LEARNING_RATE
+    outs:
+      - artifacts/prepare_base_model
